# MTCL-DFL

./: .gitignore  CMakeLists.txt  README.md
data/: download_cifar10.sh  download_mnist.sh
dataloader/: customMnistLoader.hpp
fl/: fedavg.hpp  traintest.hpp
master-slave/: CMakeLists.txt  common.hpp  config.json  master.cpp  slave.cpp
master-slave-detached/: CMakeLists.txt  Makefile  broker.cpp  common.hpp  config.json  master.cpp  slave.cpp
